Add more \'complex\' interaction, especially for daddy Dale

--- a/Dex_Gabe/index.html
+++ b/Dex_Gabe/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>JS Bin</title>
-  <script type="text/javascript" src="../Dex_Gabe/index.js"></script>
+  <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
   <p id="message"></p>
